start of the generative ai era but for now i need to break, im not a coder at all and rely on ai to  make code but ive been studying alot of topics to fill the full build into something real and now im tired.

--- a/podcast_visualization_plan.html
+++ b/podcast_visualization_plan.html
@@ -132,11 +132,16 @@
                         <li><strong>Export:</strong> Export files (video, audio, PDF, and text) from the active project media.</li>
                     </ul>
                 </li>
-                <li><strong>Mode Change:</strong> A button to switch between different UI modes, with the following options:
+                <li><strong>Dropdown Button:</strong> A single dropdown button with the following options:
                     <ul>
-                        <li><strong>Transcript:</strong> The default mode for editing and highlighting the podcast transcript.</li>
-                        <li><strong>Timeline:</strong> A mode for arranging and synchronizing visual assets with the audio.</li>
-                        <li><strong>Generate:</strong> A dedicated mode for generating and refining images.</li>
+                        <li><strong>Mode</strong></li>
+                        <li><strong>Secondary Pop Out</strong>
+                            <ul>
+                                <li><strong>Transcript:</strong> The default mode for editing and highlighting the podcast transcript.</li>
+                                <li><strong>Timeline:</strong> A mode for arranging and synchronizing visual assets with the audio.</li>
+                                <li><strong>Generative:</strong> A dedicated mode for generating and refining images.</li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
             </ul>
