--- a/podcast_visualization_plan.html
+++ b/podcast_visualization_plan.html
@@ -121,20 +121,19 @@
                 <li><strong>Functions:</strong> Key functions would include <code>generateImage()</code>, <code>updateImageDescription()</code>, and <code>regenerateImageFromTranscript()</code>.</li>
                 <li><strong>Tools:</strong> This would integrate with the AI image generation models and a central Digital Asset Management (DAM) system for the media library.</li>
                 <li><strong>Features:</strong> User-facing features would include an interactive timeline, in-place image editing/regeneration, and a version history for generated assets.</li>
-                <li><strong>File Menu:</strong> A main 'File' button would provide a dropdown menu with the following options:
+                <li><strong>Hamburger Menu:</strong> A single hamburger icon button provides a dropdown menu with the following structure:
                     <ul>
-                        <li><strong>New:</strong> Create a new project.</li>
-                        <li><strong>Open:</strong> Open an existing project.</li>
-                        <li><strong>Save:</strong> Save the current project.</li>
-                        <li><strong>Save As:</strong> Save the current project with a new name.</li>
-                        <li><strong>Import:</strong> Import files (video, audio, PDF, and text) into the project.</li>
-                        <li><strong>Export:</strong> Export files (video, audio, PDF, and text) from the active project media.</li>
-                    </ul>
-                </li>
-                <li><strong>Dropdown Button:</strong> A single dropdown button with the following options:
-                    <ul>
-                        <li><strong>Mode</strong></li>
-                        <li><strong>Secondary Pop Out</strong>
+                        <li><strong>File Options:</strong>
+                            <ul>
+                                <li>New: Create a new project.</li>
+                                <li>Open: Open an existing project.</li>
+                                <li>Save: Save the current project.</li>
+                                <li>Save As: Save the current project with a new name.</li>
+                                <li>Import: Import files (video, audio, PDF, and text) into the project.</li>
+                                <li>Export: Export files (video, audio, PDF, and text) from the active project media.</li>
+                            </ul>
+                        </li>
+                        <li><strong>Mode (Submenu):</strong> A "Mode" option with a secondary pop-out menu:
                             <ul>
                                 <li><strong>Transcript:</strong> The default mode for editing and highlighting the podcast transcript.</li>
                                 <li><strong>Timeline:</strong> A mode for arranging and synchronizing visual assets with the audio.</li>
