everything is tidy

--- a/index.html
+++ b/index.html
@@ -48,36 +48,21 @@
                 <a href="#" data-panel="sidebar-panel-image"><span>Image Media</span></a>
                 <a href="#" data-panel="sidebar-panel-audio"><span>Audio Media</span></a>
             </div>
-            <div class="menu">
-                <!-- Other menu items can go here if needed -->
-            </div>
             <div class="sidebar-panel-container">
                 <div id="sidebar-panel-text" class="sidebar-panel active-panel">
-                    <h3>In-Project Text Media</h3>
-                    <p>List of text files in the project...</p>
-                    <ul>
-                        <li>transcript_episode_1.txt</li>
-                        <li>notes_episode_1.txt</li>
-                    </ul>
-                    <button>Add Text File</button>
+                    <button class="add-media-btn">
+                        <img src="Resources/add_icon.svg" alt="Add Text Media">
+                    </button>
                 </div>
                 <div id="sidebar-panel-image" class="sidebar-panel">
-                    <h3>In-Project Image Media</h3>
-                    <p>List of image files in the project...</p>
-                    <ul>
-                        <li>autopod_AutoPod Generative Options pt1.webp</li>
-                        <li>autopod_AutoPod Timeline.webp</li>
-                    </ul>
-                    <button>Add Image File</button>
+                    <button class="add-media-btn">
+                        <img src="Resources/add_icon.svg" alt="Add Image Media">
+                    </button>
                 </div>
                 <div id="sidebar-panel-audio" class="sidebar-panel">
-                    <h3>In-Project Audio Media</h3>
-                    <p>List of audio files in the project...</p>
-                    <ul>
-                        <li>episode_1_final.mp3</li>
-                        <li>background_music.mp3</li>
-                    </ul>
-                    <button>Add Audio File</button>
+                    <button class="add-media-btn">
+                        <img src="Resources/add_icon.svg" alt="Add Audio Media">
+                    </button>
                 </div>
             </div>
         <main class="main-content">
